# ast-viewer-ui

./: .gitignore  .markdownlint.jsonc  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  deny.toml  flake.nix  testfile.rs
.github/workflows/: build.yml  format.yml  lint.yml  tests.yml
parse_rust/: Cargo.toml
parse_rust/src/: lib.rs
src/: ast_view.rs  lib.rs  main.rs
test-inputs/: find-crate-roots.rs  hello.rs  intrinsics.rs  macros.rs  quicksort.rs
ui/: Cargo.toml
ui/src/: main.rs
