[package]
name = "ast-viewer-ui"
version = "0.1.0"
edition = "2021"
description = "An AST viewer UI for languages with an AST."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "TODO"
keywords = ["AST"]
categories = ["visualization", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["parsing", "full", "extra-traits"] }
