[package]
name = "ast-viewer-ui"
version = "0.1.0"
edition = "2021"
description = "An AST viewer UI for languages with an AST."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "TODO"
keywords = ["AST"]
categories = ["visualization", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
iced = { version = "0.10", features = ["lazy"] }
proc-macro2 = "1.0.47"
quote = "1.0.21"
rfd = "0.11.3"
rmp-serde = "1.1.1"
serde = "1.0.151"
syn = { version = "1.0.105", features = ["parsing", "full", "extra-traits"] }
syn-serde = "0.2.3"
tokio = "1.28.0"
