[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "An AST viewer UI for languages with an AST."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "TODO"
keywords = ["AST"]
categories = ["visualization", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
iced = { version = "0", features = ["lazy"] }
rfd = "0.11.3"
parse_rust = { path = "../parse_rust" }
iced_node_editor = { git = "https://github.com/meew0/iced-node-editor", branch="sockets-iced-v0.12" }
iced_runtime = "0"
